--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,44 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Agrippa : ">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <!-- Latest compiled and minified CSS & JS -->
+    <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
     <title>Agrippa</title>
   </head>
-
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/unicalabs/agrippa">View on GitHub</a>
+    <div class="container">
+      <!-- MAIN CONTENT -->
+      {{ content }}
 
-          <h1 id="project_title">Agrippa</h1>
-          <h2 id="project_tagline"></h2>
+      <!-- FOOTER  -->
+      <p class="copyright">Agrippa maintained by <a href="https://github.com/unicalabs">unicalabs</a></p>
+      <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/unicalabs/agrippa/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/unicalabs/agrippa/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        {{ content }}
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Agrippa maintained by <a href="https://github.com/unicalabs">unicalabs</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
+    <script src="//code.jquery.com/jquery.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
   </body>
 </html>
