Warning, minor corrections added.

--- a/_includes/installation.html
+++ b/_includes/installation.html
@@ -7,4 +7,5 @@
     <li>Set up the database: <code>php artisan migrate</code></li>
     <li>Configure Apache or Nginx to serve the public folder. Use the <a href="http://laravel.com/docs/5.1#configuration">Laravel documentation</a> for guidance, or do some googling until we fix up this documentation.</li>
   </ol>
+  <div class="alert alert-danger" role="alert">Always serve content over HTTPS and patch your systems to keep pace with newly-documented CVEs. Agrippa stores data at-rest securely, but that's worth nothing if your data in-transit is exposed.</div>
 </p>
