Butchered the footer.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,11 @@
       {{ content }}
 
       <!-- FOOTER  -->
-      <p class="copyright">Agrippa maintained by <a href="https://github.com/unicalabs">unicalabs</a></p>
-      <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      <div class="alert alert-info" role="alert">
+        <p class="copyright">Agrippa is maintained by <a href="https://github.com/unicalabs">unicalabs</a>.</p>
+        <p>http://getagrippa.com published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </div>
+      
 
     <script src="//code.jquery.com/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
