Update GitHub link.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 
       <!-- FOOTER  -->
       <div class="alert alert-info" role="alert">
-        <p class="copyright">Agrippa is maintained by <a href="https://github.com/unicalabs">unicalabs</a>.</p>
+        <p class="copyright"><a href="https://github.com/unicalabs/agrippa">Agrippa</a> is maintained by <a href="https://github.com/unicalabs">unicalabs</a>.</p>
         <p>http://getagrippa.com published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </div>
       
