--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,13 +41,23 @@
 
       <!-- FOOTER  -->
       <div class="alert alert-info" role="alert">
-        <p class="copyright"><a href="https://github.com/unicalabs/agrippa">Agrippa</a> is maintained by <a href="https://github.com/unicalabs">unicalabs</a>.</p>
+        <p class="copyright"><a href="https://github.com/unicalabs/agrippa">Agrippa</a> is maintained by <a href="http://unicalabs.com">Unica Labs, LLC</a>.</p>
         <p>http://getagrippa.com published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </div>
       
 
     <script src="//code.jquery.com/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    
+      ga('create', 'UA-67524124-3', 'auto');
+      ga('send', 'pageview');
+    </script>
 
   </body>
 </html>
