Remove Sites URL from Footer.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
       <!-- FOOTER  -->
       <div class="alert alert-info" role="alert">
         <p class="copyright"><a href="https://github.com/unicalabs/agrippa">Agrippa</a> is maintained by <a href="http://unicalabs.com">Unica Labs, LLC</a>.</p>
-        <p>http://getagrippa.com published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </div>
       
 
